--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -35,14 +35,17 @@
     <ion-row>
         <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
          <ion-list>
-           <ion-item *ngFor='let place of loadedPlace.slice(1)' [routerLink]="['/', 'places', 'places-tabs', 'discover', place.id]" detail>
-             <ion-thumbnail slot="start">
-              <ion-img [src]="place.imageUrl"></ion-img>
-             </ion-thumbnail>
-             <ion-label>
-               <h2>{{ place.title }}</h2>
-               <p>{{ place.description }}</p>
-             </ion-label>
+           <ion-item 
+              *ngFor='let place of loadedPlace.slice(1)'
+              [routerLink]="['/', 'places', 'places-tabs', 'discover', place.id]" 
+              detail>
+              <ion-thumbnail slot="start">
+                <ion-img [src]="place.imageUrl"></ion-img>
+              </ion-thumbnail>
+              <ion-label>
+                <h2>{{ place.title }}</h2>
+                <p>{{ place.description }}</p>
+              </ion-label>
            </ion-item>
          </ion-list>
         </ion-col>
