--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -3,7 +3,9 @@
     <ion-title>Authenticate</ion-title>
   </ion-toolbar>
 </ion-header>
-
+<!-- <div class="ion-text-center">
+    <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner>
+</div> -->
 <ion-content class="ion-padding">
    <ion-button color="primary" (click)="onLogin()">Login</ion-button>
 </ion-content>
