--- a/src/app/bookings/bookings.page.html
+++ b/src/app/bookings/bookings.page.html
@@ -3,10 +3,36 @@
       <ion-buttons slot="start">
           <ion-menu-button menu="m1"></ion-menu-button>
       </ion-buttons>
-    <ion-title>You Bookings</ion-title>
+    <ion-title>Your Bookings</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+    <ion-grid>  
+        <ion-row>
+            <ion-col size="12" size-md="6" offset-md="3">
+             <ion-list>
+               <ion-item-sliding *ngFor='let booking of loadedBookings' #slidingBookingItem>
+                  <ion-item                 
+                  [routerLink]="['/', 'places', 'places-tabs', 'offers', booking.id]" 
+                  >                  
+                  <ion-label>
+                    <h5>{{ booking.placeTitle }}</h5>
+                    <p>Guests: {{ booking.guestNumber }}</p>
+                  </ion-label>
+                </ion-item>
+                <ion-item-options>
+                  <ion-item-option color="danger" (click)="onCancelBooking(booking.id, slidingBookingItem)">
+                    <ion-icon name="trash" slot="icon-only"></ion-icon>
+                  </ion-item-option>
+                  <!-- <ion-item-option color="secondary" 
+                      (click)="onEditBookings(offer.id, slidingItem)">
+                    <ion-icon name="create" slot="icon-only"></ion-icon>
+                  </ion-item-option> -->
+                </ion-item-options>
+               </ion-item-sliding>
+             </ion-list>
+            </ion-col>
+          </ion-row>
+      </ion-grid>
 </ion-content>
