--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -17,15 +17,32 @@
       <ion-row>
           <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
            <ion-list>
-             <ion-item *ngFor='let offer of loadedOffers' [routerLink]="['/', 'places', 'places-tabs', 'offers', offer.id]" detail>
-               <ion-thumbnail slot="start">
-                <ion-img [src]="offer.imageUrl"></ion-img>
-               </ion-thumbnail>
-               <ion-label>
-                 <h2>{{ offer.title }}</h2>
-                 <p>{{ offer.description }}</p>
-               </ion-label>
-             </ion-item>
+             <ion-item-sliding *ngFor='let offer of loadedOffers' #slidingItem>
+                <ion-item                 
+                [routerLink]="['/', 'places', 'places-tabs', 'offers', offer.id]" 
+                >
+                <ion-thumbnail slot="start">
+                  <ion-img [src]="offer.imageUrl"></ion-img>
+                </ion-thumbnail>
+                <ion-label>
+                  <h1>{{ offer.title }}</h1>
+                  <div class="offer-details">
+                   <ion-icon name="calendar" color="primary"></ion-icon>
+                   <ion-text color="secondary" class="space-left">{{ getDummyDate() | date}}</ion-text>
+                   <span class="space-left">to</span>
+                   <ion-icon name="calendar" color="primary" class="space-left"></ion-icon>
+                   <ion-text color="secondary" class="space-left">{{ getDummyDate() | date}}</ion-text>
+                  </div>
+                  <!-- <p>{{ offer.description }}</p> -->
+                </ion-label>
+              </ion-item>
+              <ion-item-options>
+                <ion-item-option color="secondary" 
+                    (click)="onEdit(offer.id, slidingItem)">
+                  <ion-icon name="create" slot="icon-only"></ion-icon>
+                </ion-item-option>
+              </ion-item-options>
+             </ion-item-sliding>
            </ion-list>
           </ion-col>
         </ion-row>
